# src/model/DatabaseModel.ts
@@ -1,0 +1,4 @@
+export interface DatabaseConfig {
+  id: string;
+  name: string;
+}
