# src/server/api/controllers/database.controller.ts
@@ -1,16 +1,21 @@
 import { PluginRegistry } from '../../services/database/PluginRegistry';
-import { DatabaseConfig, SupportedDatabaseType } from '../../services/database/types';
+import { DatabaseConfig } from '../../services/database/types';
 import { Controller, Get, Route } from 'tsoa';
 
 @Route('database')
 export class DatabaseController extends Controller {
-  @Get('supported-databases')
-  async getSupportedDatabaseTypes(): Promise<SupportedDatabaseType[]> {
-    return Object.values(SupportedDatabaseType);
+  @Get('plugins/ids')
+  async getSupportedDbIds(): Promise<string[]> {
+    return PluginRegistry.getAllPlugins().map((plugin) => plugin.getConfig().id);
   }
 
-  @Get('plugin/{dbType}/config')
-  async getPluginConfig(dbType: SupportedDatabaseType): Promise<DatabaseConfig | undefined> {
-    return PluginRegistry.getPluginConfig(dbType);
+  @Get('plugins/configs')
+  async getSupportedDbConfigs(): Promise<DatabaseConfig[]> {
+    return PluginRegistry.getAllPlugins().map((plugin) => plugin.getConfig());
+  }
+
+  @Get('plugin/{id}/config')
+  async getSupportedDbConfig(id: string): Promise<DatabaseConfig | undefined> {
+    return PluginRegistry.getPluginConfig(id);
   }
 }
